feat(module-client): add navbar

--- a/jqmartclient/src/app/app.component.html
+++ b/jqmartclient/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  Welcome to {{ appTitle }}!
-</h1>
+<app-navbar></app-navbar>
+<main class="main-content">
+  <h1>
+    Welcome to {{ appTitle }}!
+  </h1>
+</main>
