feat(module-client): add home module, inventory module, routing, custom preloader,  update navbar

--- a/jqmartclient/src/app/app.component.html
+++ b/jqmartclient/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
 <main class="main-content">
-  <h1>
-    Welcome to {{ appTitle }}!
-  </h1>
+  <router-outlet></router-outlet>
 </main>
