feat(module-client): add start shopping button

--- a/jqmartclient/src/styles.scss
+++ b/jqmartclient/src/styles.scss
@@ -2,7 +2,12 @@
 body {
     padding-top: 50px;
 }
+
 .main-content {
     padding: 40px 15px;
     text-align: center;
+}
+
+.btn {
+    text-transform: capitalize;
 }
