--- a/jqmartclient/src/app/home/home.component.html
+++ b/jqmartclient/src/app/home/home.component.html
@@ -1,3 +1,4 @@
 <h1>
     Welcome to {{ appTitle }}!
 </h1>
+<button routerLink="/shop" class="btn btn-primary blue-grad-color waves-light" mdbWavesEffect>{{ shopBtnText }}<i class="fa fa-shopping-cart ml-2"></i></button>
