--- a/jqmartclient/src/app/inventory/inventory.component.html
+++ b/jqmartclient/src/app/inventory/inventory.component.html
@@ -1,3 +1,50 @@
-<p>
-  Inventory
-</p>
+<div class="container">
+  
+  <div class="row">
+    <div *ngFor="let inventoryItem of inventoryItems" class=".col-md-6 ml-4 mb-4">
+
+      <!-- Card -->
+      <div class="card">
+
+          <!-- Card image -->
+          <div class="view overlay">
+            <img class="card-img-top" src="../assets/images/groceries.jpg" alt="Card image cap">
+          </div>
+        
+          <!-- Card content -->
+          <div class="card-body">
+        
+            <!-- Title -->
+            <h4 class="card-title">{{ inventoryItem.name | titlecase }}</h4>
+
+            <div class="card-text">
+
+              <div class="row">
+                  <div class="col">{{ memPriceText | titlecase }}</div>
+                  <div class="col">{{ inventoryItem.memberPrice | currency }}</div>
+              </div>
+              <div class="row">
+                  <div class="col">{{ regPriceText | titlecase }}</div>
+                  <div class="col">{{ inventoryItem.regularPrice | currency }}</div>
+              </div>
+              <div class="row">
+                  <div class="col">{{ taxText }}</div>
+                  <div class="col">{{ inventoryItem.taxStatus | titlecase }}</div>
+              </div>
+
+            </div>
+            <div class="row mt-2 mb-2">
+                <div class="col">{{ qtyText | titlecase }}</div>
+                <div class="col">{{ inventoryItem.quantity }}</div>
+            </div>
+            
+            <!-- Button -->
+            <a class="btn btn-primary blue-grad-color" [ngClass]="{'disabled': inventoryItem.quantity <= 0 }">{{ addBtnText }}</a>
+        
+          </div>
+        
+        </div>
+      <!-- Card -->
+   </div>
+  </div>
+</div>
