--- a/jqmartclient/src/app/navbar/navbar.component.html
+++ b/jqmartclient/src/app/navbar/navbar.component.html
@@ -26,7 +26,7 @@
                   <div class="divider dropdown-divider"></div>
                   <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
               </div>
-          </li>
+          </li><cart></cart><li>
         </ul>
         <!-- Links -->
     </links>
