--- a/jqmartclient/src/app/cart/cart.component.html
+++ b/jqmartclient/src/app/cart/cart.component.html
@@ -1,4 +1,31 @@
-<div><button type="button" class="btn btn-round cart-btn waves-light" mdbWavesEffect><i class="fa fa-shopping-cart mt-1 mr-1 mb-1 ml-1"></i></button><span style="color: #ffd600">100</span></div>
-<div *ngFor="let itemId of getCartMapKeys()">
-  {{ cartMap.get(itemId).name }} {{ cartMap.get(itemId).quantity }}
+<div><button (click)="cartModal.show()" type="button" class="btn btn-warning btn-round cart-btn waves-light" mdbWavesEffect><i class="fa fa-shopping-cart mt-1 mr-1 mb-1 ml-1"></i></button><span class="yellow-accent-color">100</span></div>
+
+<!--Modal-->
+<div mdbModal #cartModal="mdb-modal" class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg cascading-modal" role="document">
+        <!--Content-->
+        <div class="modal-content">
+
+            <!--Header-->
+            <div class="modal-header blue-grad-color white-text">
+                <h4 class="title"><i class="fa fa-shopping-cart"></i> {{ modalTitle | titlecase }}</h4>
+                <button type="button" class="close waves-effect waves-light" data-dismiss="modal" aria-label="Close" (click)="cartModal.hide()">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <!--Body-->
+            <div class="modal-body mb-0">
+             
+              <cart-item-list></cart-item-list>
+
+              <div class="text-center mt-2">
+                  <button class="btn btn-warning yellow-grad-color mb-2 waves-light" mdbWavesEffect>{{ modalBtnText | titlecase }} <i class="fa fa-money ml-1"></i></button>
+              </div>
+
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
 </div>
+<!--Modal-->
+                
