--- a/jqmartclient/src/styles.scss
+++ b/jqmartclient/src/styles.scss
@@ -22,9 +22,21 @@ body {
     background: $yellow-grad-color;
 }
 
+.yellow-accent-color { // yellow accent-4
+    color: #ffd600;
+}
+
 .btn-round {
     padding: 0;
     border-radius: 50%;
     height: 30px;
     width: 30px;
+}
+
+.modal-backdrop {
+    z-index: 1029;
+}
+
+.font-bold {
+    font-weight: 600;
 }
