--- a/jqmartclient/src/app/cart/cart.component.html
+++ b/jqmartclient/src/app/cart/cart.component.html
@@ -1,8 +1,8 @@
-<div><button (click)="cartModal.show()" type="button" class="btn btn-warning btn-round cart-btn waves-light" mdbWavesEffect><i class="fa fa-shopping-cart mt-1 mr-1 mb-1 ml-1"></i></button><span class="yellow-accent-color">100</span></div>
+<div><button (click)="cartModal.show()" type="button" class="btn btn-warning btn-round cart-btn waves-light" mdbWavesEffect><i class="fa fa-shopping-cart mt-1 mr-1 mb-1 ml-1"></i></button><span class="yellow-accent-color">{{ totalItemsInCart }}</span></div>
 
 <!--Modal-->
-<div mdbModal #cartModal="mdb-modal" class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg cascading-modal" role="document">
+<div mdbModal #cartModal="mdb-modal" class="modal fade" id="cart-modal-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm cascading-modal" role="document">
         <!--Content-->
         <div class="modal-content">
 
@@ -16,10 +16,39 @@
             <!--Body-->
             <div class="modal-body mb-0">
              
-              <cart-item-list></cart-item-list>
+              <div class="row">
+                <div class="col">
+                  {{ labelText1 | titlecase }}
+                </div>
+                <div class="col">
+                  {{ totalItemsInCart }}
+                </div>
+              </div>
 
+              <button id="empty-cart-btn" (click)="emptyCart()" class="btn btn-primary blue-grad-color">Empty Cart</button>
+
+              <hr>
+              <h5>{{ labelText2 | titlecase}} </h5>
+              
+              <div class="row">
+                <div class="col">
+                  {{ labelText3 }}
+                </div>
+                <div class="col">
+                  {{ subTotal[0] | currency }}
+                </div>
+              </div>
+              <div class="row">
+                <div class="col">
+                  {{ labelText4 | titlecase }}
+                </div>
+                <div class="col">
+                  {{ subTotal[1] | currency }}
+                </div>
+              </div>
+              
               <div class="text-center mt-2">
-                  <button class="btn btn-warning yellow-grad-color mb-2 waves-light" mdbWavesEffect>{{ modalBtnText | titlecase }} <i class="fa fa-money ml-1"></i></button>
+                  <button class="btn btn-warning yellow-grad-color mb-2 waves-light" mdbWavesEffect>{{ modalBtnText | titlecase }}</button>
               </div>
 
             </div>
