--- a/jqmartclient/src/app/cart-item-list/cart-item-list.component.html
+++ b/jqmartclient/src/app/cart-item-list/cart-item-list.component.html
@@ -1,22 +1,27 @@
-<div class="row">
-  <div *ngFor="let col of colHeadings" class="col font-bold">
-    {{ col | titlecase }}
-  </div>
-</div>
-<div class="row" *ngFor="let itemId of getCartMapKeys()">
-    <div class=col>
-      {{ cartMap.get(itemId).name | titlecase }}
-    </div>
-    <div class=col>
-      {{ cartMap.get(itemId).regularPrice | currency }}
-    </div>
-    <div class=col>
-      {{ cartMap.get(itemId).memberPrice | currency }}
-    </div>
-    <div class=col>
-      <button>-</button> {{ cartMap.get(itemId).quantity }} <button (click)="addToCart(cartMap.get(itemId))">+</button> 
-    </div>
-    <div class=col>
-      {{ cartMap.get(itemId).taxStatus }}
-    </div>
-</div>
+<table class="table table-striped">
+  <thead class="blue-grad-color white-text">
+    <tr>
+      <th *ngFor="let col of colHeadings" scope="col"><span class="text-nowrap">{{ col }}</span></th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let itemId of getCartMapKeys()">
+      <td><span class="text-nowrap">{{ cartMap.get(itemId).name | titlecase }}</span></td>
+      <td>{{ cartMap.get(itemId).regularPrice | currency }}</td>
+      <td>{{ cartMap.get(itemId).memberPrice | currency }}</td>
+      <td><span class="text-nowrap"><button class="hand-cursor">-</button> {{ cartMap.get(itemId).quantity }} <button (click)="addToCart(cartMap.get(itemId))" class="hand-cursor">+</button></span></td>
+      <td>{{ cartMap.get(itemId).taxStatus }}</td>
+      <td><i class="fa fa-close hand-cursor"></i></td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td><button (click)="emptyCart()" class="btn btn-primary blue-grad-color">{{ emptyCartBtnText | titlecase }}</button></td>
+  </tfoot>
+</table>
+<button routerLink="/checkout" class="btn btn-warning yellow-grad-color mb-2 waves-light" mdbWavesEffect>{{ checkoutBtnText | titlecase }}</button>
