--- a/jqmartclient/src/app/cart-item-list/cart-item-list.component.html
+++ b/jqmartclient/src/app/cart-item-list/cart-item-list.component.html
@@ -10,7 +10,7 @@
       <td><span class="text-nowrap">{{ cartMap.get(itemId).name | titlecase }}</span></td>
       <td>{{ cartMap.get(itemId).regularPrice | currency }}</td>
       <td>{{ cartMap.get(itemId).memberPrice | currency }}</td>
-      <td><span class="text-nowrap"><button class="hand-cursor">-</button> {{ cartMap.get(itemId).quantity }} <button (click)="addToCart(cartMap.get(itemId))" class="hand-cursor">+</button></span></td>
+      <td><span class="text-nowrap"><button (click)="removeFromCart(itemId)" class="hand-cursor">-</button> {{ cartMap.get(itemId).quantity }} <button (click)="addToCart(cartMap.get(itemId))" class="hand-cursor">+</button></span></td>
       <td>{{ cartMap.get(itemId).taxStatus }}</td>
       <td><i class="fa fa-close hand-cursor"></i></td>
     </tr>
