feat(module-client): add checkout service

--- a/jqmartclient/src/app/checkout/checkout.component.html
+++ b/jqmartclient/src/app/checkout/checkout.component.html
@@ -44,4 +44,5 @@
         </tr> 
     </tfoot>
   </table>
+  <button (click)="checkoutAndPrint()" routerLink="/shop" class="btn btn-warning yellow-grad-color mb-2 waves-light" mdbWavesEffect>{{ checkoutBtnText | titlecase }}</button>
         
