--- a/jqmartclient/src/app/navbar/navbar.component.html
+++ b/jqmartclient/src/app/navbar/navbar.component.html
@@ -14,19 +14,7 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          
-          <!-- Dropdown -->
-          <li class="nav-item dropdown" dropdown>
-              <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-              Basic dropdown<span class="caret"></span></a>
-              <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Action</a>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Another action</a>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
-                  <div class="divider dropdown-divider"></div>
-                  <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
-              </div>
-          </li><cart></cart><li>
+          <li><cart></cart><li>
         </ul>
         <!-- Links -->
     </links>
